can log in with a token and authenticate as well as authorize routes

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AppSettings": {
+    "Secret": "o9uinavn9889gqauienvanoign"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
